Changed return null to emptyList